--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,67 @@
 </head>
 <body>
 <script>
-    let
+    let x = [1,4,0,3,9,8];
+    let i = 0;
+    for (i = 0; i < x.length; i++) {
+        document.write(x[i] + '<br>');
+    }
+    document.write('<hr>');
+
+    for (i = 0; i < x.length; i++) {
+        if (i % 2 == 0) {
+            document.write("Element: " + i + " = " + x[i] + "<br>")
+        }
+    }
+    document.write('<hr>');
+
+    let sum = 0;
+    for (i = 0; i < x.length; i++) {
+        sum = sum + x[i];
+    }
+    document.write('Tổng là ' + sum);
+    document.write('<hr>');
+
+    let t = 1;
+    for (i = 0; i < x.length; i++) {
+        if (i % 2 == 0) {
+            t = t * x[i];
+        }
+    }
+    document.write('Tích các phần tử chẵn là ' + t);
+    document.write('<hr>');
+
+    let max = x[0];
+    for (let j = 1; j < x.length; j++) {
+        if (max < x[j]) {
+            max = x[j];
+        }
+    }
+    document.write(max);
+    document.write('<hr>');
+
+
+    let a = prompt("Nhập vào ");
+    let soluong = 0;
+    for (i = 0; i < x.length; i++) {
+        if (x[i] == a) {
+            document.write(i);
+            soluong ++;
+        }
+    }
+    if(soluong==0) {
+        document.write('-1');
+    }
+    document.write('<hr>');
+
+    let b = prompt("Nhập vào");
+    let count = 0;
+    for (i = 0; i < x.length; i++) {
+        if (b == x[i]) {
+            count++;
+        }
+    }
+    document.write("Số lượng có trong mảng là " + count);
 </script>
 </body>
 </html>
