--- a/THdaonguoc.html
+++ b/THdaonguoc.html
@@ -14,7 +14,7 @@
             j++;
         }
         document.write(x);
-
+        document.write('<hr>');
         // let x = [-3,5,1,3,2,10];
         // let last = x.length - 1;
         // for (let first = 0; first < last; first++) {
@@ -24,6 +24,10 @@
         //     last--;
         // }
         // document.write(x);
+
+        for (let a = x.length-1; a >= 0; a--) {
+            document.write(x[a] + '<br>');
+        }
     </script>
 </body>
 </html>
